form data and posting + unit tests + styles

--- a/about.html
+++ b/about.html
@@ -26,36 +26,20 @@
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="adout.html">About</a></li>
+          <li><a href="about.html">About</a></li>
         </ul>
       </nav>
     </header>
 
     <main>
-      <!--ToDo: styling, call to action -->
+      <!--ToDo: styling, call to action, description -->
       <h1>Track all the things!</h1>
-      <p>This map is showings where things are. Add things. Notes. People's Last Known Location. Where you left your keys. Whatever!</p>
-      <div id="mapid"></div>
-
-      <div class="form-container">
-
-        <form id="create-location" action="index.html" method="post">
-          <label for="location-title">Enter New Location Title</label>
-          <input type="text" name="location-title" placeholder="Location name">
-
-          <label for="location-note">Enter a note!</label>
-          <input type="text" name="location-note" placeholder="Notes, say what you want!">
-
-          <label for="location-latlong">Enter Lat/Long</label>
-          <input type="text" name="location" placeholder="Latitude, Longitude (note the comma to separate the numbers!)">
-        </form>
-        <button id="newMapItem" type="submit" name="button">Enter Location!</button>
-        <p class="save-message"></p>
-      </div>
-
+      <p>
+        This map is showings where things are. Add things. Notes. People's Last Known Location. Where you left your keys. Whatever!
+      </p>
     </main>
     <footer>
-      <p>©2018. By <a href="http://www.danbeerman.com">Dan</a>.</p>
+      <p>Copyright 2018. By <a href="https://www.danbeerman.com">Dan</a>.</p>
     </footer>
     <script type="text/javascript" src="scripts/app.js"></script>
   </body>
