Markers show up when you submit! Deploying Progress to firebase

--- a/about.html
+++ b/about.html
@@ -12,13 +12,13 @@
    integrity="sha512-lInM/apFSqyy1o6s89K4iQUKg6ppXEgsVxT35HbzUupEVRh2Eu9Wdl4tHj7dZO0s1uvplcYGmt3498TtHq+log=="
    crossorigin=""></script>
 
-    <title>Where's Stuff?!</title>
+    <title>MapIt</title>
   </head>
   <body>
     <header>
       <!--ToDo: Logo, nag, styling -->
       <div class="logo">
-        WHERE'S STUFF?!
+        MapIt
       </div>
       <div class="slug">
         the app that helps you keep track of shit
@@ -35,8 +35,9 @@
       <!--ToDo: styling, call to action, description -->
       <h1>Track all the things!</h1>
       <p>
-        This map is showings where things are. Add things. Notes. People's Last Known Location. Where you left your keys. Whatever!
+        Maybe you want to show people where you're at and where to look if you you don't show up at work on Monday. Maybe you want to share with your friends some of the best dive bars. Or maybe you want to show off all states you've visited.
       </p>
+      <p>This app will save all the locations entered to it with a note attached to it. You share the map with everyone else. Or at leat that's the goal.</p>
     </main>
     <footer>
       <p>Copyright 2018. By <a href="https://www.danbeerman.com">Dan</a>.</p>
