--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
    integrity="sha512-lInM/apFSqyy1o6s89K4iQUKg6ppXEgsVxT35HbzUupEVRh2Eu9Wdl4tHj7dZO0s1uvplcYGmt3498TtHq+log=="
    crossorigin=""></script>
 
-    <title>Where's Stuff?!</title>
+    <title>MapIt</title>
   </head>
   <body>
     <header>
       <!--ToDo: Logo, nag, styling -->
       <div class="logo">
-        WHERE'S STUFF?!
+        MapIt
       </div>
       <div class="slug">
         the app that helps you keep track of shit
@@ -34,7 +34,7 @@
     <main>
       <!--ToDo: styling, call to action -->
       <h1>Track all the things!</h1>
-      <p>This map is showings where things are. Add things. Notes. People's Last Known Location. Where you left your keys. Whatever!</p>
+      <p>The map that makes tracking things easy. Add things. Notes. People's last known location. Where you left your keys. Whatever!</p>
       <div id="mapid"></div>
 
       <div class="form-container">
