--- a/index.html
+++ b/index.html
@@ -2,61 +2,103 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/styles/reset.css">
+    <!-- <link rel="stylesheet" href="/styles/reset.css"> -->
     <link rel="stylesheet" href="/styles/main.css">
-
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css"
   integrity="sha512-M2wvCLH6DSRazYeZRIm1JnYyh22purTM+FDB5CsyxtQJYeKq83arPe5wgbNmcFXGqiSH2XR8dT/fJISVA1r/zQ=="
   crossorigin=""/>
     <script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js"
    integrity="sha512-lInM/apFSqyy1o6s89K4iQUKg6ppXEgsVxT35HbzUupEVRh2Eu9Wdl4tHj7dZO0s1uvplcYGmt3498TtHq+log=="
    crossorigin=""></script>
-
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
     <title>MapIt</title>
   </head>
   <body>
     <header>
-      <!--ToDo: Logo, nag, styling -->
-      <div class="logo">
-        MapIt
-      </div>
-      <div class="slug">
-        the app that helps you keep track of shit
-      </div>
       <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="adout.html">About</a></li>
-        </ul>
+        <div class="nav-wrapper green darken-4">
+          <a href="#" class="brand-logo center">MapIt</a>
+          <ul id="nav-mobile" class="left">
+            <li>
+              <a href="Home.html">Home</a>
+            </li>
+            <li>
+              <a href="About.html">About</a>
+            </li>
+          </ul>
+        </div>
       </nav>
     </header>
-
     <main>
-      <!--ToDo: styling, call to action -->
-      <h1>Track all the things!</h1>
-      <p>The map that makes tracking things easy. Add things. Notes. People's last known location. Where you left your keys. Whatever!</p>
-      <div id="mapid"></div>
-
-      <div class="form-container">
-
-        <form id="create-location" action="index.html" method="post">
-          <label for="location-title">Enter New Location Title</label>
-          <input type="text" name="location-title" placeholder="Location name">
-
-          <label for="location-note">Enter a note!</label>
-          <input type="text" name="location-note" placeholder="Notes, say what you want!">
-
-          <label for="location-latlong">Enter Lat/Long</label>
-          <input type="text" name="location" placeholder="Latitude, Longitude (note the comma to separate the numbers!)">
-        </form>
-        <button id="newMapItem" type="submit" name="button">Enter Location!</button>
-        <p class="save-message"></p>
+      <div class="row">
+        <div class="col s12">
+          <div class="col l5 s12 offset-l1">
+            <h2>
+              Map all the things!
+            </h2>
+            <p>
+              Work with a team to map your favorite hikes, bars, parking spots, homes, treasure and more!
+            </p>
+            <p>
+              Click the map to get Latitude and Longitude info. Title and notes are on you.
+            </p>
+          </div>
+          <div class="col l5 s12 form-container center card green darken-2 card-content white-text">
+            <form id="create-location" action="index.html" method="post">
+              <div>
+                <label for="location-title">Enter New Location Title</label>
+                <input type="text" name="location-title" placeholder="Location name">
+              </div>
+              <div>
+                <label for="location-note">Enter a note!</label>
+                <input type="text" name="location-note" placeholder="Notes, say what you want!">
+              </div>
+              <div>
+                <label for="location-latlong">Enter Lat/Long</label>
+                <input type="text" name="location" placeholder="Latitude, Longitude (note the comma to separate the numbers!)">
+              </div>
+            </form>
+            <button id="newMapItem" class="waves-effect waves-light btn-large center" type="submit" name="button">Enter Location!</button>
+            <p class="save-message"></p>
+          </div>
+        </div>
       </div>
-
+      <div class="cols12 container" id="mapid"></div>
     </main>
-    <footer>
-      <p>©2018. By <a href="http://www.danbeerman.com">Dan</a>.</p>
+    <footer class="page-footer card green darken-4">
+      <div class="container">
+        <div class="row">
+          <div class="col l6 s12">
+            <h5 class="white-text">Footer Content</h5>
+            <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+          </div>
+          <div class="col l4 offset-l2 s12">
+            <h5 class="white-text">Links</h5>
+            <ul>
+              <li>
+                <a class="grey-text text-lighten-3" href="http://www.danbeerman.com">Dan's Website</a>
+              </li>
+              <li>
+                <a class="grey-text text-lighten-3" href="http://leafletjs.com/reference-1.2.0.html">Leaflet Info</a>
+              </li>
+              <li>
+                <a class="grey-text text-lighten-3" href="https://www.mapbox.com/">Mapbox Info</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="footer-copyright">
+        <div class="container">
+          <p>©2018 Copyright. By <a href="http://www.danbeerman.com">Dan</a>.</p>
+          <a class="grey-text text-lighten-4 right" href="#!">Thanks for stopping by!</a>
+        </div>
+      </div>
     </footer>
+    <script tpye="text/javascript" src="scripts/Leaflet.Sleep.js"></script>
     <script type="text/javascript" src="scripts/app.js"></script>
   </body>
 </html>
