Added formatting and cleaned some code up...

--- a/about.html
+++ b/about.html
@@ -36,8 +36,7 @@
         Map all the things!
       </h2>
       <p>
-        This is light weight web app that allows you to collect a map with markers which display notes from locations provided by
-        you, the user...
+        This is light weight web app that allows you to create markers on a map. Each marker gets notes and saves to your browser session. A database would be useful - then you can see other people's spots.
       </p>
       <p>
         Next steps? A database(s) that will allow you to save your map. A public map which would let the crowd add their own spots.
