--- a/index.html
+++ b/index.html
@@ -60,23 +60,23 @@
                 <input id="mapLocation" type="text" name="location" placeholder="Latitude, Longitude (note the comma to separate the numbers!)">
               </div>
             </form>
-            <button id="newMapItem" class="waves-effect waves-light btn-large center" type="submit" name="button">Enter Location!</button>
+            <button id="newMapItem" class="waves-effect waves-light btn-large" type="submit" name="button">Enter Location!</button>
             <p class="save-message"></p>
           </div>
         </div>
       </div>
       <div class="cols12 container" id="mapid"></div>
     </main>
-    <footer class="page-footer card green darken-4">
+    <footer class="page-footer card green darken-3">
       <div class="container">
         <div class="row">
           <div class="col l6 s12">
             <h5 class="white-text">Suggestions?</h5>
-            <p class="grey-text text-lighten-4">Submit them here: 
               <div class="input-field inline">
-                <input id="email" type="email" class="validate">
-                <label for="email" data-error="wrong" data-success="right" placeholder="Suggestions?"></label>
+                <input id="suggest" type="text">
+                <label for="seggestion" aria-placeholder="This feature isn't active quite yet..."></label>
               </div>
+              <a class="btn waves-effect waves-light teal" type="submit">Submit</a>
             </p>
           </div>
           <div class="col l4 offset-l2 s12">
