commiting dev branch - has comments, logs and notes/test urls

--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
             <form id="create-location" action="index.html" method="post">
               <div>
                 <label for="location-title">Enter New Location Title</label>
-                <input type="text" name="location-title" placeholder="Location name">
+                <input id="location-title" type="text" name="location-title" placeholder="Location Name">
               </div>
               <div>
                 <label for="location-note">Enter a note!</label>
-                <input type="text" name="location-note" placeholder="Notes, say what you want!">
+                <input id="location-note" type="text" name="location-note" placeholder="Notes, say what you want!">
               </div>
               <div>
                 <label for="location-latlong">Enter Lat/Long</label>
